# dukto-qt5

./: CMakeLists.txt  buddylistitemmodel.cpp  dukto.desktop  dukto.pro  duktoprotocol.cpp  duktoprotocol.h  duktowindow.cpp  duktowindow.h  ecwin7.cpp  ecwin7.h  guibehind.cpp  guibehind.h  ipaddressitemmodel.cpp  main.cpp  miniwebserver.cpp  platform.cpp  platform.h  recentlistitemmodel.cpp  recentlistitemmodel.h  settings.cpp  settings.h  systemtray.cpp  systemtray.h  theme.cpp  theme.h  updateschecker.cpp  updateschecker.h
qml/dukto/: AboutPage.qml  BuddyListElement.qml  Button.qml  ButtonDark.qml  DuktoInner.qml  DuktoOverlay.qml  ProgressPage.qml  RecentPage.qml  SText.qml  SendPage.qml  SettingsPage.qml  ShowTextPage.qml  TabBar.qml  TermsPage.qml
qmlapplicationviewer/: qmlapplicationviewer.pri
qtsingleapplication/: CMakeLists.txt  qtlocalpeer.cpp  qtlocalpeer.h  qtsingleapplication.cpp  qtsingleapplication.h  qtsingleapplication.pri
